// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup.Radio /> snapshot checked 1`] = `
.c3 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 *:nth-child(2) {
  margin-left: 5px;
}

.c4:focus ~ .c2 {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c4:hover ~ .c2 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c4:active ~ .c2 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1:focus ~ .c2 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c1:hover ~ .c2 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c1:active ~ .c2 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 .c5 {
  font-size: 17px;
  margin-left: 8px;
}

<div
  className="c0"
>
  <input
    checked={true}
    className="c1"
    disabled={false}
    id="radio-button-1"
    onChange={[Function]}
    type="radio"
    value="Foo"
  />
  <label
    checked={true}
    className="c2 c3"
    disabled={false}
    htmlFor="radio-button-1"
  >
    Foo
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot children 1`] = `
.c3 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #FFFFFF;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #1355d0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 *:nth-child(2) {
  margin-left: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1:focus ~ .c2 {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c1:hover ~ .c2 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c1:active ~ .c2 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c4:focus ~ .c2 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c4:hover ~ .c2 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c4:active ~ .c2 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c5:focus ~ .c2 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c5:hover ~ .c2 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c5:active ~ .c2 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c0 .c6 {
  font-size: 17px;
  margin-left: 8px;
}

<div
  className="c0"
>
  <input
    checked={false}
    className="c1"
    disabled={false}
    id="radio-button-7"
    onChange={[Function]}
    type="radio"
    value="Foo"
  />
  <label
    checked={false}
    className="c2 c3"
    disabled={false}
    htmlFor="radio-button-7"
  >
    Foo
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot disabled 1`] = `
.c3 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: rgba(204,204,204,0.4);
  border: 1.5px solid #999999;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 *:nth-child(2) {
  margin-left: 5px;
}

.c5:focus ~ .c2 {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c5:hover ~ .c2 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c5:active ~ .c2 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c6:focus ~ .c2 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c6:hover ~ .c2 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c6:active ~ .c2 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 .c4 {
  font-size: 17px;
  margin-left: 8px;
}

.c7 .c4 {
  font-size: 17px;
  margin-left: 8px;
}

<div
  className="c0"
>
  <input
    checked={false}
    className="c1"
    disabled={true}
    id="radio-button-4"
    onChange={[Function]}
    type="radio"
    value="Foo"
  />
  <label
    checked={false}
    className="c2 c3"
    disabled={true}
    htmlFor="radio-button-4"
  >
    Foo
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c4 "
      style={
        Object {
          "color": "",
        }
      }
    >
      lock
    </span>
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot disabled with an error 1`] = `
.c3 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: rgba(204,204,204,0.4);
  border: 1.5px solid #999999;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 *:nth-child(2) {
  margin-left: 5px;
}

.c5:focus ~ .c2 {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c5:hover ~ .c2 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c5:active ~ .c2 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c6:focus ~ .c2 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c6:hover ~ .c2 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c6:active ~ .c2 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1:focus ~ .c2 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c1:hover ~ .c2 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c1:active ~ .c2 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c0 .c4 {
  font-size: 17px;
  margin-left: 8px;
}

.c7 .c4 {
  font-size: 17px;
  margin-left: 8px;
}

<div
  className="c0"
>
  <input
    checked={false}
    className="c1"
    disabled={true}
    id="radio-button-6"
    onChange={[Function]}
    type="radio"
    value="Foo"
  />
  <label
    checked={false}
    className="c2 c3"
    disabled={true}
    htmlFor="radio-button-6"
  >
    Foo
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c4 "
      style={
        Object {
          "color": "",
        }
      }
    >
      lock
    </span>
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot error 1`] = `
.c3 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #FFFFFF;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #1355d0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #ff2d4d;
  border-color: #ff2d4d;
}

.c3 *:nth-child(2) {
  margin-left: 5px;
}

.c4:focus ~ .c2 {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c4:hover ~ .c2 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c4:active ~ .c2 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c5:focus ~ .c2 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c5:hover ~ .c2 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c5:active ~ .c2 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1:focus ~ .c2 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c1:hover ~ .c2 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c1:active ~ .c2 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c0 .c6 {
  font-size: 17px;
  margin-left: 8px;
}

<div
  className="c0"
>
  <input
    checked={false}
    className="c1"
    disabled={false}
    id="radio-button-5"
    onChange={[Function]}
    type="radio"
    value="Foo"
  />
  <label
    checked={false}
    className="c2 c3"
    disabled={false}
    htmlFor="radio-button-5"
  >
    Foo
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot icon 1`] = `
.c3 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #FFFFFF;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #1355d0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 *:nth-child(2) {
  margin-left: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1:focus ~ .c2 {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c1:hover ~ .c2 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c1:active ~ .c2 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c5:focus ~ .c2 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c5:hover ~ .c2 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c5:active ~ .c2 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c4 {
  margin-right: 8px;
}

.c0 .c6 {
  font-size: 17px;
  margin-left: 8px;
}

<div
  className="c0"
>
  <input
    checked={false}
    className="c1"
    disabled={false}
    id="radio-button-3"
    onChange={[Function]}
    type="radio"
    value="Foo"
  />
  <label
    checked={false}
    className="c2 c3"
    disabled={false}
    htmlFor="radio-button-3"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c4"
      style={
        Object {
          "color": "",
        }
      }
    >
      check
    </span>
    Foo
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot inline 1`] = `
.c3 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #FFFFFF;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #1355d0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 *:nth-child(2) {
  margin-left: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1:focus ~ .c2 {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c1:hover ~ .c2 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c1:active ~ .c2 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c4:focus ~ .c2 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c4:hover ~ .c2 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c4:active ~ .c2 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  display: inline-block;
  margin-right: 16px;
  vertical-align: top;
}

.c0:last-child {
  margin-right: 0;
}

.c0 .c5 {
  font-size: 17px;
  margin-left: 8px;
}

<div
  className="c0"
>
  <input
    checked={false}
    className="c1"
    disabled={false}
    id="radio-button-2"
    onChange={[Function]}
    type="radio"
    value="Foo"
  />
  <label
    checked={false}
    className="c2 c3"
    disabled={false}
    htmlFor="radio-button-2"
  >
    Foo
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot simple 1`] = `
.c3 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #FFFFFF;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #1355d0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 *:nth-child(2) {
  margin-left: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1:focus ~ .c2 {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c1:hover ~ .c2 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c1:active ~ .c2 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c0 .c4 {
  font-size: 17px;
  margin-left: 8px;
}

<div
  className="c0"
>
  <input
    checked={false}
    className="c1"
    disabled={false}
    id="radio-button-0"
    onChange={[Function]}
    type="radio"
    value="Foo"
  />
  <label
    checked={false}
    className="c2 c3"
    disabled={false}
    htmlFor="radio-button-0"
  >
    Foo
  </label>
</div>
`;
